--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,15 @@
 			<artifactId>camel-spring</artifactId>
 			<version>2.18.1</version>
 		</dependency>
-
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.22</version>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-weather</artifactId>
+			<version>2.18.1</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.8</version>
 		</dependency>
 	</dependencies>
 	<build>
